tests/records/records.exp
Error ----------------------------------------------------------------------------------------------- declaration.js:8:5

Cannot get `x.xxx` because property `xxx` is missing in `R` [1]. [prop-missing]

   declaration.js:8:5
   8|   x.xxx; // ERROR: property not found
          ^^^

References:
   declaration.js:5:20
   5|   declare const x: R;
                         ^ [1]


Error ---------------------------------------------------------------------------------------------- declaration.js:20:3

Cannot cast `x.a` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   declaration.js:20:3
   20|   x.a as empty; // ERROR: `number`
         ^^^

References:
   declaration.js:14:8
   14|     a: number,
              ^^^^^^ [1]
   declaration.js:20:10
   20|   x.a as empty; // ERROR: `number`
                ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- declaration.js:36:5

Cannot get `x.xxx` because property `xxx` is missing in `R` [1]. [prop-missing]

   declaration.js:36:5
   36|   x.xxx; // ERROR: property not found
           ^^^

References:
   declaration.js:31:20
   31|   declare const x: R;
                          ^ [1]


Error ---------------------------------------------------------------------------------------------- declaration.js:47:5

Cannot assign `1` to `x.a` because property `a` is not writable. [cannot-write]

   47|   x.a = 1; // ERROR: not writable
           ^


Error --------------------------------------------------------------------------------------------- declaration.js:133:5

Cannot assign function to `R.random` because property `random` is not writable. [cannot-write]

   133|   R.random = () => x; // ERROR: method not writable
            ^^^^^^


Error --------------------------------------------------------------------------------------------- declaration.js:143:3

Cannot cast `R.zero` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   declaration.js:143:3
   143|   R.zero as empty; // ERROR: `number`
          ^^^^^^

References:
   declaration.js:139:18
   139|     static zero: number = 0,
                         ^^^^^^ [1]
   declaration.js:143:13
   143|   R.zero as empty; // ERROR: `number`
                    ^^^^^ [2]


Error --------------------------------------------------------------------------------------------- declaration.js:144:5

Cannot assign `1` to `R.zero` because property `zero` is not writable. [cannot-write]

   144|   R.zero = 1; // ERROR: static not writable
            ^^^^


Error --------------------------------------------------------------------------------------------- declaration.js:171:7

Cannot compare `x` [1] to number literal `1` [2], because `R` [3] is not a subtype of number literal `1` [2] and number
literal `1` [2] is not a subtype of `R` [3]. In **rare** cases, these types may have overlapping values but lack a
subtyping relationship. If that happens, you can cast one side to the union of both types to pass the flow check. 
[invalid-compare]

   declaration.js:171:7
   171|   if (x === 1) {} // ERROR
              ^^^^^^^

References:
   declaration.js:168:17
   168|   declare const x: R;
                        ^ [1]
   declaration.js:171:13
   171|   if (x === 1) {} // ERROR
                    ^ [2]
   declaration.js:168:20
   168|   declare const x: R;
                           ^ [3]


Error --------------------------------------------------------------------------------------------- declaration.js:201:3

Cannot cast `x` to `E` because property `xxx` is missing in `R` [1] but exists in `E` [2]. [incompatible-type]

   declaration.js:201:3
   201|   x as E; // ERROR
          ^

References:
   declaration.js:189:20
   189|   declare const x: R;
                           ^ [1]
   declaration.js:201:8
   201|   x as E; // ERROR
               ^ [2]


Error --------------------------------------------------------------------------------------------- declaration.js:212:3

Cannot cast `x` to object type because `R` [1] is not a subtype of object type [2]. Records are not subtypes of object
types; consider rewriting object type [2] as an interface. [class-object-subtyping]

   declaration.js:212:3
   212|   x as {+a: number}; // ERROR
          ^

References:
   declaration.js:210:20
   210|   declare const x: R;
                           ^ [1]
   declaration.js:212:8
   212|   x as {+a: number}; // ERROR
               ^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- declaration.js:213:3

Cannot cast `x` to object type because `R` [1] is not a subtype of object type [2]. Records are not subtypes of object
types; consider rewriting object type [2] as an interface. [class-object-subtyping]

   declaration.js:213:3
   213|   x as {+a: number, ...}; // ERROR
          ^

References:
   declaration.js:210:20
   210|   declare const x: R;
                           ^ [1]
   declaration.js:213:8
   213|   x as {+a: number, ...}; // ERROR
               ^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- declaration.js:309:3

Cannot reassign record binding `R` [1]. [cannot-reassign]

   declaration.js:309:3
   309|   R = null; // ERROR: cannot reassign
          ^

References:
   declaration.js:297:10
   297|   record R {
                 ^ [1]


Error -------------------------------------------------------------------------------------------- declaration.js:366:22

Cannot instantiate `R` because in type argument `T`: [incompatible-type]
 - Either boolean [1] is incompatible with number [2].
 - Or boolean [1] is incompatible with string [3].

   declaration.js:366:22
   366|   declare const z: R<boolean>; // ERROR
                             ^^^^^^^ [1]

References:
   declaration.js:360:15
   360|   record R<T: number | string> {
                      ^^^^^^ [2]
   declaration.js:360:24
   360|   record R<T: number | string> {
                               ^^^^^^ [3]


Error --------------------------------------------------------------------------------------------- declaration.js:396:9

Cannot extend `R` [1] with `C` because `R` [1] is not inheritable. [incompatible-use]

   declaration.js:396:9
   396|   class C extends R { // ERROR
                ^

References:
   declaration.js:396:19
   396|   class C extends R { // ERROR
                          ^ [1]


Error -------------------------------------------------------------------------------------------- declaration.js:399:22

Cannot implement `R` because it is not an interface. [cannot-implement]

   399|   class D implements R { // ERROR
                             ^


Error -------------------------------------------------------------------------------------------- declaration.js:411:29

Operation `$ReadOnly` [1] is not allowed on record `R` [2]. To fix, turn the record type into an object type first using
`{...MyRecord}`, for example: `TypeUtil<{...MyRecord}>`. [record-banned-type-util]

   declaration.js:411:29
   411|   type ReadonlyR = Readonly<R>; // ERROR
                                    ^ [2]

References:
   declaration.js:411:20
   411|   type ReadonlyR = Readonly<R>; // ERROR
                           ^^^^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------------- declaration.js:412:27

Operation partial `R` [1] is not allowed on record `R` [1]. To fix, turn the record type into an object type first using
`{...MyRecord}`, for example: `TypeUtil<{...MyRecord}>`. [record-banned-type-util]

   412|   type PartialR = Partial<R>; // ERROR
                                  ^ [1]


Error -------------------------------------------------------------------------------------------- declaration.js:413:29

Operation required of `R` [1] is not allowed on record `R` [1]. To fix, turn the record type into an object type first
using `{...MyRecord}`, for example: `TypeUtil<{...MyRecord}>`. [record-banned-type-util]

   413|   type RequiredR = Required<R>; // ERROR
                                    ^ [1]


Error -------------------------------------------------------------------------------------------- declaration.js:414:21

Operation `Pick` [1] is not allowed on record `R` [2]. To fix, turn the record type into an object type first using
`{...MyRecord}`, for example: `TypeUtil<{...MyRecord}>`. [record-banned-type-util]

   declaration.js:414:21
    414|   type PickR = Pick<R, 'a'>; // ERROR
                             ^ [2]

References:
   <BUILTINS>/core.js:3179:47
   3179| type Pick<O: interface {}, Keys: $Keys<O>> = {[key in Keys]: O[key]};
                                                       ^^^^^^^^^^^^^^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------------- declaration.js:416:21

Operation `Omit` [1] is not allowed on record `R` [2]. To fix, turn the record type into an object type first using
`{...MyRecord}`, for example: `TypeUtil<{...MyRecord}>`. [record-banned-type-util]

   declaration.js:416:21
    416|   type OmitR = Omit<R, 'a'>; // ERROR
                             ^ [2]

References:
   <BUILTINS>/core.js:3184:46
   3184| type Omit<O: interface {}, Keys: $Keys<O>> = $Omit<O, Keys>;
                                                      ^^^^^^^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------------- declaration.js:418:24

Operation `$Exact` [1] is not allowed on record `R` [2]. To fix, turn the record type into an object type first using
`{...MyRecord}`, for example: `TypeUtil<{...MyRecord}>`. [record-banned-type-util]

   declaration.js:418:24
   418|   type ExactR = $Exact<R>; // ERROR
                               ^ [2]

References:
   declaration.js:418:17
   418|   type ExactR = $Exact<R>; // ERROR
                        ^^^^^^^^^ [1]


Error --------------------------------------------------------------------------------------------- declaration.js:432:4

Cannot cast object literal to `OmitObjR` because property `a` is extra in object literal [1] but missing in `Omit` [2].
Exact objects do not accept extra props. [incompatible-type]

   declaration.js:432:4
   432|   ({a: 1, b: 's'}) as OmitObjR; // ERROR: property `a` is extra
           ^^^^^^^^^^^^^^ [1]

References:
   declaration.js:432:23
   432|   ({a: 1, b: 's'}) as OmitObjR; // ERROR: property `a` is extra
                              ^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- declaration.js:464:9

Cannot call `R` with `oB` bound to `fields` because property `a` is missing in object literal [1] but exists in object
type [2]. [incompatible-type]

   declaration.js:464:9
   464|   new R(oB); // ERROR: missing `a`
                ^^

References:
   declaration.js:460:14
   460|   const oB = {b: 's'};
                     ^^^^^^^^ [1]
   declaration.js:454:12
                   v
   454|   record R {
   455|     a: number,
   456|     b: string,
   457|   }
          ^ [2]


Error --------------------------------------------------------------------------------------------- declaration.js:465:9

Cannot call `R` with `oEmpty` bound to `fields` because properties `a` and `b` are missing in object literal [1] but
exist in object type [2]. [incompatible-type]

   declaration.js:465:9
   465|   new R(oEmpty); // ERROR: missing `a` and `b`
                ^^^^^^

References:
   declaration.js:459:18
   459|   const oEmpty = {};
                         ^^ [1]
   declaration.js:454:12
                   v
   454|   record R {
   455|     a: number,
   456|     b: string,
   457|   }
          ^ [2]


Error --------------------------------------------------------------------------------------------- declaration.js:477:9

Cannot call `R` with `oExtra` bound to `fields` because property `xxx` is extra in object literal [1] but missing in
object type [2]. Exact objects do not accept extra props. [incompatible-type]

   declaration.js:477:9
   477|   new R(oExtra); // ERROR
                ^^^^^^

References:
   declaration.js:476:18
   476|   const oExtra = {a: 1, b: 's', xxx: false};
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   declaration.js:454:12
                   v
   454|   record R {
   455|     a: number,
   456|     b: string,
   457|   }
          ^ [2]


Error -------------------------------------------------------------------------------------------- declaration.js:478:12

Cannot call `ROpt` with `oExtra` bound to `fields` because property `xxx` is extra in object literal [1] but missing in
object type [2]. Exact objects do not accept extra props. [incompatible-type]

   declaration.js:478:12
   478|   new ROpt(oExtra); // ERROR
                   ^^^^^^

References:
   declaration.js:476:18
   476|   const oExtra = {a: 1, b: 's', xxx: false};
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   declaration.js:467:15
                      v
   467|   record ROpt {
   468|     a: number = 0,
   469|     b: string = '',
   470|   }
          ^ [2]


Error --------------------------------------------------------------------------------------------- declaration.js:485:5

`a` has already been declared in this record. Record property names must be unique. [duplicate-class-member]

   485|     a: number, // ERROR
            ^


Error -------------------------------------------------------------------------------------------- declaration.js:492:17

Cannot initialize property `a` with `true` because boolean [1] is incompatible with number [2]. [incompatible-type]

   declaration.js:492:17
   492|     a: number = true, // ERROR
                        ^^^^ [1]

References:
   declaration.js:492:8
   492|     a: number = true, // ERROR
               ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- expression.js:5:16

Records are not enabled. [unsupported-syntax]

   5|   const x: R = R {}; // TODO: records
                     ^^^^



Found 29 errors
